// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default elements and styles: test Button SignIn style 1`] = `
Object {
  "alignItems": "center",
  "alignSelf": "center",
  "backgroundColor": "#ba473c",
  "borderColor": "#2089dc",
  "borderRadius": 3,
  "borderWidth": 0,
  "flexDirection": "row",
  "justifyContent": "center",
  "padding": 8,
  "width": 150,
}
`;

exports[`renders default elements and styles: test Input style 1`] = `
Object {
  "paddingLeft": 70,
  "paddingRight": 70,
}
`;

exports[`renders default elements and styles: test InputMail style 1`] = `
Object {
  "alignSelf": "center",
  "color": "#242424",
  "flex": 1,
  "fontSize": 18,
  "minHeight": 40,
}
`;

exports[`renders default elements and styles: test InputMotDePasse style 1`] = `
Object {
  "alignSelf": "center",
  "color": "#242424",
  "flex": 1,
  "fontSize": 18,
  "minHeight": 40,
}
`;

exports[`renders default elements and styles: test KeyboardAvoidingView style 1`] = `
Object {
  "flex": 1,
}
`;

exports[`renders default elements and styles: test MainContainer style 1`] = `
Object {
  "flex": 1,
  "justifyContent": "center",
}
`;

exports[`renders default elements and styles: test PlaceHolder Input Mail style 1`] = `
Object {
  "alignItems": "center",
  "borderBottomWidth": 1,
  "borderColor": "#86939e",
  "flexDirection": "row",
  "transform": Array [
    Object {
      "translateX": 0,
    },
  ],
}
`;

exports[`renders default elements and styles: test PlaceHolder Input MotDePasse style 1`] = `
Object {
  "alignItems": "center",
  "borderBottomWidth": 1,
  "borderColor": "#86939e",
  "flexDirection": "row",
  "transform": Array [
    Object {
      "translateX": 0,
    },
  ],
}
`;

exports[`renders default elements and styles: test Text Button SignIn style 1`] = `
Object {
  "color": "white",
  "fontSize": 18,
  "paddingVertical": 1,
  "textAlign": "center",
}
`;

exports[`renders default elements and styles: test Text Error style 1`] = `
Object {
  "alignSelf": "center",
  "color": "red",
  "fontSize": 17,
  "paddingBottom": 25,
}
`;

exports[`renders default elements and styles: test Text Navigation style1 1`] = `
Object {
  "color": "#ba473c",
}
`;

exports[`renders default elements and styles: test Text Navigation style2 1`] = `
Object {
  "color": "#ba473c",
}
`;

exports[`renders default elements and styles: test View Button SignIn style 1`] = `
Object {
  "opacity": 1,
}
`;

exports[`renders default elements and styles: test View Navigation style 1`] = `
Object {
  "alignSelf": "center",
  "paddingTop": 30,
}
`;

exports[`renders default elements and styles: test touchableOpacity Navigation style 1`] = `
Object {
  "alignSelf": "center",
  "opacity": 1,
}
`;
